[gd_scene load_steps=2 format=3 uid="uid://settings"]

[ext_resource type="Script" path="res://shared/Settings.gd" id="1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.53, 0.81, 0.92, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "⚙️ SETTINGS"
horizontal_alignment = 1

[node name="VolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="VBoxContainer/VolumeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="VolumeValue" type="Label" parent="VBoxContainer/VolumeContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "100%"

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Music:"

[node name="MusicToggle" type="CheckButton" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
button_pressed = true
text = "On"

[node name="SFXContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SFX:"

[node name="SFXToggle" type="CheckButton" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
button_pressed = true
text = "On"

[node name="DifficultyContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/DifficultyContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Difficulty:"

[node name="DifficultySelector" type="OptionButton" parent="VBoxContainer/DifficultyContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TutorialContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TutorialLabel" type="Label" parent="VBoxContainer/TutorialContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Tutorials:"

[node name="TutorialToggle" type="CheckButton" parent="VBoxContainer/TutorialContainer"]
layout_mode = 2
button_pressed = true
text = "Show"

[node name="HapticsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HapticsLabel" type="Label" parent="VBoxContainer/HapticsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Haptics:"

[node name="HapticsToggle" type="CheckButton" parent="VBoxContainer/HapticsContainer"]
layout_mode = 2
button_pressed = true
text = "On"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Back to Menu"
